; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_registry.c_msi_reg_set_val_str.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_registry.c_msi_reg_set_val_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@szEmpty = common dso_local global i64 0, align 8
@REG_SZ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @msi_reg_set_val_str(i32 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %6, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %3
  %11 = load i64, i64* @szEmpty, align 8
  store i64 %11, i64* %6, align 8
  br label %12

12:                                               ; preds = %10, %3
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @lstrlenW(i64 %13)
  %15 = add nsw i32 %14, 1
  %16 = sext i32 %15 to i64
  %17 = mul i64 %16, 4
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %4, align 4
  %20 = load i64, i64* %5, align 8
  %21 = load i32, i32* @REG_SZ, align 4
  %22 = load i64, i64* %6, align 8
  %23 = inttoptr i64 %22 to i32*
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @RegSetValueExW(i32 %19, i64 %20, i32 0, i32 %21, i32* %23, i32 %24)
  ret i32 %25
}

declare dso_local i32 @lstrlenW(i64) #1

declare dso_local i32 @RegSetValueExW(i32, i64, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
